@@ -44,6 +44,7 @@ namespace eval ::Plotchart {
    set methodProc(xyplot,trend)          DrawTrendLine
    set methodProc(xyplot,vector)         DrawVector
    set methodProc(xyplot,vectorconfig)   VectorConfigure
+   set methodProc(xyplot,rchart)         DrawRchart
    set methodProc(xyplot,grid)           DrawGrid
    set methodProc(xyplot,contourlines)   DrawIsolines
    set methodProc(xyplot,contourfill)    DrawShades
